--- a/src/app/components/input-url/input-url.component.html
+++ b/src/app/components/input-url/input-url.component.html
@@ -1,6 +1,6 @@
 <div class='input-block'>
   <mat-form-field class="example-form-field">
-  <mat-label>Enter URL:</mat-label>
+  <mat-label>Enter API endpoint to show data</mat-label>
   <input matInput type="url" [(ngModel)]="userURL" #inputURL>
   <button mat-button *ngIf="userURL" matSuffix mat-icon-button aria-label="Clear" (click)="userURL=''">
     <mat-icon>close</mat-icon>
